connect mysql with asp.net

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 
-Web-BTL-Backend/appsettings.json
-Web-BTL-Backend/appsettings.json
-Web-BTL-Backend/appsettings.json
-Web-BTL-Backend/appsettings.json
-Web-BTL-Backend/appsettings.json
+Web-BTL-Backend\appsettings.json
+
